# humanRightsVisualization

./: README.md  app.py  human_rights_articles_embedded.csv  human_rights_visualization.py  pyproject.toml
