[tool.poetry]
name = "humanrightsvisualization"
version = "0.1.0"
description = ""
authors = ["Maria Kesa"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
plotly = "^5.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
