[tool.poetry]
name = "humanrightsvisualization"
version = "0.1.0"
description = ""
authors = ["Maria Kesa"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = ">=0.25,<2"
plotly = "^5.14.1"
streamlit = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
